@@ -4,3 +4,10 @@ seablock.lib.substingredient('anode-lead-smelting', 'liquid-hexafluorosilicic-ac
 
 -- Compost void recipe
 angelsmods.functions.make_void('solid-compost', 'bio', 5)
+
+-- Remove recipe Wood pellets > Carbon dioxide
+-- Move recipe Charcoal > Carbon dioxide from Basic chemistry to Wood processing 2
+bobmods.lib.tech.remove_recipe_unlock('bio-wood-processing-2', 'gas-carbon-dioxide-from-wood')
+seablock.lib.remove_recipe('gas-carbon-dioxide-from-wood')
+bobmods.lib.tech.remove_recipe_unlock('basic-chemistry', 'carbon-separation-2')
+bobmods.lib.tech.add_recipe_unlock('bio-wood-processing-2', 'carbon-separation-2')
