@@ -9,6 +9,7 @@ Date: ???
     - Refund all landfill when painting over sand islands
     - Added missing tech prerequisites
     - Reduced cost of Water Treatment tech
+    - Hid recipe Wood Pellets > Carbon Dioxide
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
